--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,3 +4,14 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+
+h1 {
+	font-size: 2rem;
+}
+
+.wrapper {
+	max-width: 900px;
+	margin: 50px auto;
+	text-align: center;
+	opacity: 0.3;
+}
