--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -22,6 +22,16 @@ body {
 	margin: 50px auto;
 	text-align: center;
 	margin-top: 100px;
+	position: relative;
+	height: 80vh;
+}
+
+.first-section {
+	height: 50vh;
+	max-height: 50vh;
+	display: block;
+	margin-top: 15vh;
+	border: 1px solid transparent;
 }
 
 h1, .h1 {
@@ -32,6 +42,10 @@ h1, .h1 {
 
 .problem-statement-holder,
 .solution-statement-holder {
+}
+
+.solution-statement-holder {
+	display: none;
 }
 
 .problem-statement {
@@ -46,9 +60,34 @@ h1, .h1 {
 .solution-intro {
 	font-size: 22px;
 	font-weight: 400;
-	margin-top: -35px;
+	margin-top: -45px;
 	display: block;
 	margin-bottom: 20px;
+}
+
+.buttons {
+	position: absolute;
+	bottom: 80px;
+	margin: 0 auto;
+	text-align: center;
+	width: 100%;
+}
+button, .button {
+	display: inline-block;
+	font-size: 18px;
+	line-height: 2.2;
+	padding: 0px 30px;
+	border: 4px solid white;
+	margin: 0px 5px;
+	font-weight: 500;
+	cursor: pointer;
+	border-radius: 6px;
+
+	&:first-of-type {
+		border: 4px solid white;
+		background-color: transparent;
+		color: white;
+	}
 }
 
 .the-follow-up {
