--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -90,36 +90,80 @@ body {
   margin: 50px auto;
   text-align: center;
   margin-top: 100px;
+  position: relative;
+  height: 80vh;
 }
 
-/* line 27, ../sass/screen.scss */
+/* line 29, ../sass/screen.scss */
+.first-section {
+  height: 50vh;
+  max-height: 50vh;
+  display: block;
+  margin-top: 15vh;
+  border: 1px solid transparent;
+}
+
+/* line 37, ../sass/screen.scss */
 h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
   font-weight: 700;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
+.solution-statement-holder {
+  display: none;
+}
+
+/* line 51, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 39, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
 }
 
-/* line 45, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 .intro,
 .solution-intro {
   font-size: 22px;
   font-weight: 400;
-  margin-top: -35px;
+  margin-top: -45px;
   display: block;
   margin-bottom: 20px;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
+.buttons {
+  position: absolute;
+  bottom: 80px;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+}
+
+/* line 75, ../sass/screen.scss */
+button, .button {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 2.2;
+  padding: 0px 30px;
+  border: 4px solid white;
+  margin: 0px 5px;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 6px;
+}
+/* line 86, ../sass/screen.scss */
+button:first-of-type, .button:first-of-type {
+  border: 4px solid white;
+  background-color: transparent;
+  color: white;
+}
+
+/* line 93, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
