--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -94,7 +94,12 @@ body {
   height: 80vh;
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
+.hidden {
+  display: none;
+}
+
+/* line 33, ../sass/screen.scss */
 .first-section {
   height: 50vh;
   max-height: 50vh;
@@ -103,7 +108,7 @@ body {
   border: 1px solid transparent;
 }
 
-/* line 37, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
@@ -111,21 +116,27 @@ h1, .h1 {
 }
 
 /* line 47, ../sass/screen.scss */
+.problem-statement-holder,
 .solution-statement-holder {
   display: none;
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
+.solution-statement-holder {
+  display: none;
+}
+
+/* line 56, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 53, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
 }
 
-/* line 59, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 .intro,
 .solution-intro {
   font-size: 22px;
@@ -135,7 +146,7 @@ h1, .h1 {
   margin-bottom: 20px;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 73, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -144,7 +155,7 @@ h1, .h1 {
   width: 100%;
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 button, .button {
   display: inline-block;
   font-size: 18px;
@@ -156,14 +167,14 @@ button, .button {
   cursor: pointer;
   border-radius: 6px;
 }
-/* line 86, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 93, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
