--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -30,7 +30,7 @@ body {
 .hidden {
 	display: none;
 }
-.first-section {
+.main-section {
 	height: 50vh;
 	max-height: 50vh;
 	display: block;
@@ -44,7 +44,12 @@ h1, .h1 {
 	font-weight: 700;
 }
 
+strong {
+	font-weight: bold;
+}
+
 .problem-statement-holder,
+.consideration-holder,
 .solution-statement-holder {
 	display: none;
 }
@@ -67,6 +72,16 @@ h1, .h1 {
 	font-weight: 400;
 	margin-top: -45px;
 	display: block;
+	margin-bottom: 20px;
+}
+
+.the-considerations {
+	margin-bottom: 20px;
+}
+
+.the-evidence {
+	font-size: 22px;
+	font-weight: 400;
 	margin-bottom: 20px;
 }
 
@@ -95,7 +110,31 @@ button, .button {
 	}
 }
 
+/* Define animation starting points */
+@keyframes bounceDown {
+  from {transform:translateY(10px)}
+  to {transform:translateY(0px)}
+}
+
+.evidence-card {
+	background: white;
+	padding: 20px;
+	max-width: 500px;
+	margin: 0 auto;
+	border-radius: 8px;
+	box-shadow: 0 1px 3px 1px rgba(60,64,67,.2), 0 2px 8px 4px rgba(60,64,67,.1);
+
+	p {
+		color: #444444;
+	}
+
+	&.animate {
+		animation: bounceDown 0.25s 0.35s cubic-bezier(.75,-1,0,1.75) both;
+	}
+}
+
 .problem-buttons,
+.consideration-buttons,
 .again-buttons {
 	display: none;
 }
@@ -104,6 +143,18 @@ button, .button {
 	display: block;
 	margin-top: 20px;
 	color: white;
+}
+
+.fine-print {
+	font-family: sans-serif;
+	font-size: 12px;
+	opacity: 0.4;
+}
+
+.superscript {
+	vertical-align: super;
+	opacity: 0.4;
+	font-size: 14px;
 }
 
 .the-follow-up {
