--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -100,7 +100,7 @@ body {
 }
 
 /* line 33, ../sass/screen.scss */
-.first-section {
+.main-section {
   height: 50vh;
   max-height: 50vh;
   display: block;
@@ -116,27 +116,33 @@ h1, .h1 {
 }
 
 /* line 47, ../sass/screen.scss */
+strong {
+  font-weight: bold;
+}
+
+/* line 51, ../sass/screen.scss */
 .problem-statement-holder,
+.consideration-holder,
 .solution-statement-holder {
   display: none;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 .solution-statement-holder {
   display: none;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 58, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 69, ../sass/screen.scss */
 .intro,
 .solution-intro {
   font-size: 22px;
@@ -146,7 +152,19 @@ h1, .h1 {
   margin-bottom: 20px;
 }
 
-/* line 73, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
+.the-considerations {
+  margin-bottom: 20px;
+}
+
+/* line 82, ../sass/screen.scss */
+.the-evidence {
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+/* line 88, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -155,7 +173,7 @@ h1, .h1 {
   width: 100%;
 }
 
-/* line 80, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 button, .button {
   display: inline-block;
   font-size: 18px;
@@ -167,27 +185,69 @@ button, .button {
   cursor: pointer;
   border-radius: 6px;
 }
-/* line 91, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 98, ../sass/screen.scss */
+/* Define animation starting points */
+@keyframes bounceDown {
+  from {
+    transform: translateY(10px);
+  }
+  to {
+    transform: translateY(0px);
+  }
+}
+/* line 119, ../sass/screen.scss */
+.evidence-card {
+  background: white;
+  padding: 20px;
+  max-width: 500px;
+  margin: 0 auto;
+  border-radius: 8px;
+  box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
+}
+/* line 127, ../sass/screen.scss */
+.evidence-card p {
+  color: #444444;
+}
+/* line 131, ../sass/screen.scss */
+.evidence-card.animate {
+  animation: bounceDown 0.25s 0.35s cubic-bezier(0.75, -1, 0, 1.75) both;
+}
+
+/* line 136, ../sass/screen.scss */
 .problem-buttons,
+.consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
   color: white;
 }
 
-/* line 109, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
+.fine-print {
+  font-family: sans-serif;
+  font-size: 12px;
+  opacity: 0.4;
+}
+
+/* line 154, ../sass/screen.scss */
+.superscript {
+  vertical-align: super;
+  opacity: 0.4;
+  font-size: 14px;
+}
+
+/* line 160, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
