--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 @import "compass/reset";
 
 html, body {
@@ -17,26 +12,40 @@ body {
 	background: linear-gradient(to right, #ff9068, #fd746c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.wrapper {
-	max-width: 900px;
-	margin: 50px auto;
-	text-align: center;
-	margin-top: 100px;
-	position: relative;
-	height: 80vh;
+/* *************************
+        ANIMATIONS
+************************* */
+
+/* Define Animations */
+@keyframes slideIn {
+  from {transform:translateY(400px);}
+  to {transform:translateY(0);}
 }
 
+@keyframes slideInShort {
+  from {transform:translateY(80px);}
+  to {transform:translateY(0);}
+}
 
-.hidden {
-	display: none;
+@keyframes slideDown {
+  from {transform: translateY(-120px)}
+  to {transform: translateY(0)}
 }
-.main-section {
-	height: 50vh;
-	max-height: 50vh;
-	display: block;
-	margin-top: 15vh;
-	border: 1px solid transparent;
+
+@keyframes fadeIn {
+  from {opacity:0;}
+  to{ opaticy: 1;}
 }
+
+/* Animation Variables */
+$easeOutCust:cubic-bezier(.03,.16,.39,0.99);
+$easeInQuad: cubic-bezier(0.550, 0.085, 0.680, 0.530);
+$easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
+
+
+/* *************************
+        TYPOGRAPHY
+************************* */
 
 h1, .h1 {
 	font-size: 48px;
@@ -48,24 +57,7 @@ strong {
 	font-weight: bold;
 }
 
-.problem-statement-holder,
-.consideration-holder,
-.solution-statement-holder {
-	display: none;
-}
-
-.solution-statement-holder {
-	display: none;
-}
-
-.problem-statement {
-	margin-top: 50px;
-	.the-emotions {
-		display: block;
-		margin-top: 20px;
-	}
-}
-
+p,
 .intro,
 .solution-intro {
 	font-size: 22px;
@@ -75,15 +67,54 @@ strong {
 	margin-bottom: 20px;
 }
 
-.the-considerations {
-	margin-bottom: 20px;
+.fine-print {
+	font-family: sans-serif;
+	font-size: 12px;
+	opacity: 0.4;
 }
 
-.the-evidence {
-	font-size: 22px;
-	font-weight: 400;
-	margin-bottom: 20px;
+.superscript {
+	vertical-align: super;
+	opacity: 0.4;
+	font-size: 14px;
 }
+
+
+/* *************************
+         CONTAINERS
+************************* */
+
+.wrapper {
+	max-width: 900px;
+	margin: 50px auto;
+	text-align: center;
+	margin-top: 100px;
+	position: relative;
+	height: 80vh;
+}
+
+.main-section {
+	height: 50vh;
+	max-height: 50vh;
+	display: block;
+	margin-top: 15vh;
+	border: 1px solid transparent;
+}
+
+.hidden {
+	display: none;
+}
+
+.problem-statement-holder,
+.consideration-holder,
+.solution-statement-holder {
+	display: none;
+}
+
+
+/* *************************
+          BUTTONS
+************************* */
 
 .buttons {
 	position: absolute;
@@ -92,6 +123,7 @@ strong {
 	text-align: center;
 	width: 100%;
 }
+
 button, .button {
 	display: inline-block;
 	font-size: 18px;
@@ -110,10 +142,44 @@ button, .button {
 	}
 }
 
-/* Define animation starting points */
-@keyframes bounceDown {
-  from {transform:translateY(10px)}
-  to {transform:translateY(0px)}
+.problem-buttons,
+.consideration-buttons,
+.again-buttons {
+	display: none;
+}
+
+.reset-button {
+	display: block;
+	margin-top: 20px;
+	color: white;
+}
+
+
+/* *************************
+   PROBLEM-SPECIFIC STUFF
+************************* */
+
+.problem-statement {
+	margin-top: 50px;
+	.the-emotions {
+		display: block;
+		margin-top: 20px;
+	}
+}
+
+
+/* *************************
+CONSIDERATION-SPECIFIC STUFF
+************************* */
+
+.the-considerations {
+	margin-bottom: 20px;
+}
+
+.the-evidence {
+	font-size: 22px;
+	font-weight: 400;
+	margin-bottom: 20px;
 }
 
 .evidence-card {
@@ -129,33 +195,15 @@ button, .button {
 	}
 
 	&.animate {
-		animation: bounceDown 0.25s 0.35s cubic-bezier(.75,-1,0,1.75) both;
+		animation: slideIn .65s $easeOutBack both,
+		fadeIn 0.25s $easeInQuad both;
 	}
 }
 
-.problem-buttons,
-.consideration-buttons,
-.again-buttons {
-	display: none;
-}
 
-.reset-button {
-	display: block;
-	margin-top: 20px;
-	color: white;
-}
-
-.fine-print {
-	font-family: sans-serif;
-	font-size: 12px;
-	opacity: 0.4;
-}
-
-.superscript {
-	vertical-align: super;
-	opacity: 0.4;
-	font-size: 14px;
-}
+/* *************************
+  SOLUTIONS-SPECIFIC STUFF
+************************* */
 
 .the-follow-up {
 	font-size: 18px;
