--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -14,7 +14,11 @@ body {
 
 /* *************************
         ANIMATIONS
+
+working from https://codepen.io/valhead/pen/ByRaBd
 ************************* */
+
+
 
 /* Define Animations */
 @keyframes slideIn {
