--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -82,6 +82,8 @@ body {
 
 /* *************************
         ANIMATIONS
+
+working from https://codepen.io/valhead/pen/ByRaBd
 ************************* */
 /* Define Animations */
 @keyframes slideIn {
@@ -120,19 +122,19 @@ body {
 /* *************************
         TYPOGRAPHY
 ************************* */
-/* line 50, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
   font-weight: 700;
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 60, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 p,
 .intro,
 .solution-intro {
@@ -143,14 +145,14 @@ p,
   margin-bottom: 20px;
 }
 
-/* line 70, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 .fine-print {
   font-family: sans-serif;
   font-size: 12px;
   opacity: 0.4;
 }
 
-/* line 76, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 .superscript {
   vertical-align: super;
   opacity: 0.4;
@@ -160,7 +162,7 @@ p,
 /* *************************
          CONTAINERS
 ************************* */
-/* line 87, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
@@ -170,7 +172,7 @@ p,
   height: 80vh;
 }
 
-/* line 96, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -179,12 +181,12 @@ p,
   border: 1px solid transparent;
 }
 
-/* line 104, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 .hidden {
   display: none;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -194,7 +196,7 @@ p,
 /* *************************
           BUTTONS
 ************************* */
-/* line 119, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -203,7 +205,7 @@ p,
   width: 100%;
 }
 
-/* line 127, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 button, .button {
   display: inline-block;
   font-size: 18px;
@@ -215,21 +217,21 @@ button, .button {
   cursor: pointer;
   border-radius: 6px;
 }
-/* line 138, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 145, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 151, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -239,11 +241,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 162, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 164, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -252,19 +254,19 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 175, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 179, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .evidence-card {
   background: white;
   padding: 20px;
@@ -273,11 +275,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 193, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 197, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -285,7 +287,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 208, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
