--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -75,10 +75,23 @@ p {
 	margin-bottom: 20px;
 }
 
+.caption-label {
+	text-transform: uppercase;
+	color: #b1b1b1;
+	display: block;
+	font-family: sans-serif;
+	font-size: 16px;
+	margin: 10px 0;
+	letter-spacing: 1px;
+	font-weight: 700;
+}
+
 .fine-print {
 	font-family: sans-serif;
 	font-size: 12px;
 	opacity: 0.4;
+	display: block;
+	margin-top: 30px;
 }
 
 .superscript {
