--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -151,13 +151,27 @@ p {
 }
 
 /* line 78, ../sass/screen.scss */
+.caption-label {
+  text-transform: uppercase;
+  color: #b1b1b1;
+  display: block;
+  font-family: sans-serif;
+  font-size: 16px;
+  margin: 10px 0;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+/* line 89, ../sass/screen.scss */
 .fine-print {
   font-family: sans-serif;
   font-size: 12px;
   opacity: 0.4;
+  display: block;
+  margin-top: 30px;
 }
 
-/* line 84, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 .superscript {
   vertical-align: super;
   opacity: 0.4;
@@ -167,7 +181,7 @@ p {
 /* *************************
          CONTAINERS
 ************************* */
-/* line 95, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
@@ -177,7 +191,7 @@ p {
   height: 80vh;
 }
 
-/* line 104, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -186,12 +200,12 @@ p {
   border: 1px solid transparent;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .hidden {
   display: none;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -201,7 +215,7 @@ p {
 /* *************************
           BUTTONS
 ************************* */
-/* line 126, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -210,7 +224,7 @@ p {
   width: 100%;
 }
 
-/* line 134, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 button, .button {
   display: inline-block;
   font-size: 18px;
@@ -222,21 +236,21 @@ button, .button {
   cursor: pointer;
   border-radius: 6px;
 }
-/* line 145, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 152, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 158, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -246,11 +260,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 169, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 171, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -259,19 +273,19 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 182, ../sass/screen.scss */
+/* line 195, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 199, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
 
-/* line 192, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 .evidence-card {
   background: white;
   padding: 20px;
@@ -280,11 +294,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 200, ../sass/screen.scss */
+/* line 213, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 204, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -292,7 +306,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 215, ../sass/screen.scss */
+/* line 228, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
