--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* line 5, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -72,11 +73,11 @@ html, body {
 
 /* line 9, ../sass/screen.scss */
 body {
-  background: #fd746c;
+  background: #fd6c6c;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ff9068, #fd746c);
+  background: -webkit-linear-gradient(to right, #ff9068, #fd6c6c);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ff9068, #fd746c);
+  background: linear-gradient(to right, #ff9068, #fd6c6c);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
@@ -185,13 +186,14 @@ p {
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
+  padding: 0 20px;
   text-align: center;
   margin-top: 100px;
   position: relative;
   height: 80vh;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 118, ../sass/screen.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -200,12 +202,12 @@ p {
   border: 1px solid transparent;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 .hidden {
   display: none;
 }
 
-/* line 129, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -215,16 +217,16 @@ p {
 /* *************************
           BUTTONS
 ************************* */
-/* line 139, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
   margin: 0 auto;
   text-align: center;
-  width: 100%;
+  width: calc(100% - 40px);
 }
 
-/* line 147, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 button, .button {
   display: inline-block;
   font-size: 18px;
@@ -236,21 +238,21 @@ button, .button {
   cursor: pointer;
   border-radius: 6px;
 }
-/* line 158, ../sass/screen.scss */
+/* line 159, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 165, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -260,11 +262,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 182, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 184, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -273,18 +275,18 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 195, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 199, ../sass/screen.scss */
+/* line 200, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 204, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 .the-evidence strong {
   font-family: sans-serif;
   font-weight: 700;
@@ -292,7 +294,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 20px;
 }
 
-/* line 212, ../sass/screen.scss */
+/* line 213, ../sass/screen.scss */
 .evidence-card {
   background: white;
   padding: 20px;
@@ -301,11 +303,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 220, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 224, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -313,14 +315,37 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 235, ../sass/screen.scss */
+/* line 238, ../sass/screen.scss */
+.solution-statement p.h1:after {
+  content: '™';
+  vertical-align: super;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+/* line 247, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: italic;
   display: block;
   margin-top: 100px;
 }
-/* line 241, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
 .the-follow-up a {
   color: white;
+}
+/* line 257, ../sass/screen.scss */
+.the-follow-up .coupon-code strong,
+.the-follow-up span.social-account,
+.the-follow-up .to-thirty {
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  font-style: initial;
+}
+/* line 266, ../sass/screen.scss */
+.the-follow-up .emoji {
+  font-style: initial;
+  vertical-align: middle;
+  font-size: 1.7rem;
 }
