--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -73,11 +73,11 @@ html, body {
 
 /* line 9, ../sass/screen.scss */
 body {
-  background: #fd6c6c;
+  background: #ff6b94;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ff9068, #fd6c6c);
+  background: -webkit-linear-gradient(to right, #ff6b94, #ff6449);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ff9068, #fd6c6c);
+  background: linear-gradient(to right, #ff6b94, #ff6449);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
