changing strong color

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -290,7 +290,7 @@ CONSIDERATION-SPECIFIC STUFF
 .the-evidence strong {
   font-family: sans-serif;
   font-weight: 700;
-  color: #009cf8;
+  color: #009df8;
   font-size: 20px;
 }
 
