--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -205,7 +205,7 @@ CONSIDERATION-SPECIFIC STUFF
 	strong {
 		font-family: sans-serif;
 		font-weight: 700;
-		color: #009cf8;
+		color: #009df8;
 		font-size: 20px;
 	}
 }
