--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* line 5, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,45 +21,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../Library/Ruby/Gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../.rvm/gems/ruby-2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -144,35 +144,45 @@ p {
 }
 
 /* line 71, ../sass/screen.scss */
-.intro,
-.solution-intro {
+.intro {
   margin-top: -45px;
   display: block;
   margin-bottom: 20px;
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
+.solution-intro {
+  display: block;
+  margin-bottom: 20px;
+  font-family: sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+/* line 87, ../sass/screen.scss */
 .caption-label {
   text-transform: uppercase;
   color: #b1b1b1;
   display: block;
   font-family: sans-serif;
   font-size: 16px;
-  margin: 10px 0;
+  margin: 15px 0;
   letter-spacing: 1px;
   font-weight: 700;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 .fine-print {
   font-family: sans-serif;
-  font-size: 12px;
-  opacity: 0.4;
+  font-size: 13px;
+  opacity: 0.5;
   display: block;
   margin-top: 30px;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .superscript {
   vertical-align: super;
   opacity: 0.4;
@@ -182,7 +192,7 @@ p {
 /* *************************
          CONTAINERS
 ************************* */
-/* line 108, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
@@ -193,7 +203,7 @@ p {
   height: 80vh;
 }
 
-/* line 118, ../sass/screen.scss */
+/* line 127, ../sass/screen.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -202,12 +212,12 @@ p {
   border: 1px solid transparent;
 }
 
-/* line 126, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .hidden {
   display: none;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -217,7 +227,7 @@ p {
 /* *************************
           BUTTONS
 ************************* */
-/* line 140, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -226,33 +236,35 @@ p {
   width: calc(100% - 40px);
 }
 
-/* line 148, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 button, .button {
   display: inline-block;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 2.2;
-  padding: 0px 30px;
+  padding: 5px 30px;
   border: 4px solid white;
-  margin: 0px 5px;
-  font-weight: 500;
+  margin: 0px 6px;
+  font-weight: 700;
   cursor: pointer;
   border-radius: 6px;
+  color: #9B2450;
+  text-transform: uppercase;
 }
-/* line 159, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 166, ../sass/screen.scss */
+/* line 177, ../sass/screen.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 172, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -262,11 +274,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 183, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 185, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -275,18 +287,18 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 196, ../sass/screen.scss */
+/* line 207, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 205, ../sass/screen.scss */
+/* line 216, ../sass/screen.scss */
 .the-evidence strong {
   font-family: sans-serif;
   font-weight: 700;
@@ -294,20 +306,20 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 20px;
 }
 
-/* line 213, ../sass/screen.scss */
+/* line 224, ../sass/screen.scss */
 .evidence-card {
   background: white;
-  padding: 20px;
+  padding: 20px 20px 35px;
   max-width: 500px;
   margin: 10px auto 0;
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 221, ../sass/screen.scss */
+/* line 232, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 225, ../sass/screen.scss */
+/* line 236, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -315,7 +327,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 238, ../sass/screen.scss */
+/* line 249, ../sass/screen.scss */
 .solution-statement p.h1:after {
   content: '™';
   vertical-align: super;
@@ -323,18 +335,29 @@ CONSIDERATION-SPECIFIC STUFF
   font-weight: 400;
 }
 
-/* line 247, ../sass/screen.scss */
+/* line 258, ../sass/screen.scss */
+.solution-card {
+  border-radius: 8px;
+  box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
+  margin: 0 auto;
+  max-width: 700px;
+  padding: 80px 50px 40px;
+  background: rgba(255, 255, 255, 0.1);
+  height: auto;
+}
+
+/* line 268, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
-  font-style: italic;
+  font-style: inherit;
   display: block;
-  margin-top: 100px;
+  margin-top: 40px;
 }
-/* line 253, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .the-follow-up a {
   color: white;
 }
-/* line 257, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .the-follow-up .coupon-code strong,
 .the-follow-up span.social-account,
 .the-follow-up .to-thirty {
@@ -343,7 +366,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 18px;
   font-style: initial;
 }
-/* line 266, ../sass/screen.scss */
+/* line 287, ../sass/screen.scss */
 .the-follow-up .emoji {
   font-style: initial;
   vertical-align: middle;
