--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,7 +4,7 @@ html, body {
 	font-size: 15px;
 	line-height: 1.4;
 	color: white;
-	font-family: "utopia-std", "times new roman", serif;
+	font-family: "utopia-std", "Times New Roman", serif;
 }
 
 body {
@@ -56,8 +56,8 @@ h1, .h1 {
 	font-size: 48px;
 	line-height: 1.2;
 	font-weight: 700;
-	font-family: "utopia-std", "times new roman", serif;
-	
+	font-family: "utopia-std", "Times New Roman", serif;
+
 }
 
 strong {
