--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -69,7 +69,7 @@ html, body {
   font-size: 15px;
   line-height: 1.4;
   color: white;
-  font-family: "utopia-std", "times new roman", serif;
+  font-family: "utopia-std", "Times New Roman", serif;
 }
 
 /* line 10, ../sass/screen.scss */
@@ -129,7 +129,7 @@ h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
   font-weight: 700;
-  font-family: "utopia-std", "times new roman", serif;
+  font-family: "utopia-std", "Times New Roman", serif;
 }
 
 /* line 63, ../sass/screen.scss */
