--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -156,7 +156,7 @@ p {
 .solution-intro {
   display: block;
   margin-bottom: 20px;
-  font-family: sans-serif;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 700;
@@ -168,7 +168,7 @@ p {
   text-transform: uppercase;
   color: #b1b1b1;
   display: block;
-  font-family: sans-serif;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
   font-size: 16px;
   margin: 15px 0;
   letter-spacing: 1px;
@@ -177,7 +177,7 @@ p {
 
 /* line 100, ../sass/screen.scss */
 .fine-print {
-  font-family: sans-serif;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
   font-size: 13px;
   opacity: 0.5;
   display: block;
@@ -271,16 +271,17 @@ button:first-of-type, .button:first-of-type {
   display: block;
   margin-top: 20px;
   color: white;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
 }
 
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 196, ../sass/screen.scss */
+/* line 197, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 198, ../sass/screen.scss */
+/* line 199, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -289,26 +290,26 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 209, ../sass/screen.scss */
+/* line 210, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 213, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 218, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 .the-evidence strong {
-  font-family: sans-serif;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
   font-weight: 700;
   color: #009df8;
   font-size: 20px;
 }
 
-/* line 226, ../sass/screen.scss */
+/* line 227, ../sass/screen.scss */
 .evidence-card {
   background: white;
   padding: 20px 20px 35px;
@@ -317,11 +318,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 234, ../sass/screen.scss */
+/* line 235, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 238, ../sass/screen.scss */
+/* line 239, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -329,15 +330,15 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 251, ../sass/screen.scss */
+/* line 252, ../sass/screen.scss */
 .solution-statement p.h1:after {
   content: '™';
-  vertical-align: super;
-  font-size: 20px;
+  vertical-align: top;
+  font-size: 40px;
   font-weight: 400;
 }
 
-/* line 260, ../sass/screen.scss */
+/* line 261, ../sass/screen.scss */
 .solution-card {
   border-radius: 8px;
   box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
@@ -348,27 +349,27 @@ CONSIDERATION-SPECIFIC STUFF
   height: auto;
 }
 
-/* line 270, ../sass/screen.scss */
+/* line 271, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: inherit;
   display: block;
   margin-top: 40px;
 }
-/* line 276, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 .the-follow-up a {
   color: white;
 }
-/* line 280, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 .the-follow-up .coupon-code strong,
 .the-follow-up span.social-account,
 .the-follow-up .to-thirty {
-  font-family: sans-serif;
+  font-family: "Hevetica Neue", helvetica, sans-serif;
   font-weight: 700;
   font-size: 18px;
   font-style: initial;
 }
-/* line 289, ../sass/screen.scss */
+/* line 290, ../sass/screen.scss */
 .the-follow-up .emoji {
   font-style: initial;
   vertical-align: middle;
