--- a/stylesheets/screen1.css
+++ b/stylesheets/screen1.css
@@ -64,7 +64,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 3, ../sass/screen.scss */
+/* line 3, ../sass/screen1.scss */
 html, body {
   font-size: 15px;
   line-height: 1.4;
@@ -72,7 +72,7 @@ html, body {
   font-family: "utopia-std", "Times New Roman", serif;
 }
 
-/* line 10, ../sass/screen.scss */
+/* line 10, ../sass/screen1.scss */
 body {
   background: #ff6b94;
   /* fallback for old browsers */
@@ -124,7 +124,7 @@ working from https://codepen.io/valhead/pen/ByRaBd
 /* *************************
         TYPOGRAPHY
 ************************* */
-/* line 55, ../sass/screen.scss */
+/* line 55, ../sass/screen1.scss */
 h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
@@ -132,12 +132,12 @@ h1, .h1 {
   font-family: "utopia-std", "Times New Roman", serif;
 }
 
-/* line 62, ../sass/screen.scss */
+/* line 62, ../sass/screen1.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 66, ../sass/screen.scss */
+/* line 66, ../sass/screen1.scss */
 p {
   font-size: 22px;
   font-weight: 400;
@@ -145,14 +145,14 @@ p {
   margin-bottom: 20px;
 }
 
-/* line 73, ../sass/screen.scss */
+/* line 73, ../sass/screen1.scss */
 .intro {
   margin-top: -45px;
   display: block;
   margin-bottom: 20px;
 }
 
-/* line 79, ../sass/screen.scss */
+/* line 79, ../sass/screen1.scss */
 .solution-intro {
   display: block;
   margin-bottom: 20px;
@@ -163,7 +163,7 @@ p {
   letter-spacing: 1px;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 89, ../sass/screen1.scss */
 .caption-label {
   text-transform: uppercase;
   color: #b1b1b1;
@@ -175,7 +175,7 @@ p {
   font-weight: 700;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 100, ../sass/screen1.scss */
 .fine-print {
   font-family: "Hevetica Neue", helvetica, sans-serif;
   font-size: 13px;
@@ -184,7 +184,7 @@ p {
   margin-top: 30px;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 108, ../sass/screen1.scss */
 .superscript {
   vertical-align: super;
   opacity: 0.4;
@@ -194,7 +194,7 @@ p {
 /* *************************
          CONTAINERS
 ************************* */
-/* line 119, ../sass/screen.scss */
+/* line 119, ../sass/screen1.scss */
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
@@ -205,7 +205,7 @@ p {
   height: 80vh;
 }
 
-/* line 129, ../sass/screen.scss */
+/* line 129, ../sass/screen1.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -214,12 +214,12 @@ p {
   border: 1px solid transparent;
 }
 
-/* line 137, ../sass/screen.scss */
+/* line 137, ../sass/screen1.scss */
 .hidden {
   display: none;
 }
 
-/* line 141, ../sass/screen.scss */
+/* line 141, ../sass/screen1.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -229,7 +229,7 @@ p {
 /* *************************
           BUTTONS
 ************************* */
-/* line 151, ../sass/screen.scss */
+/* line 151, ../sass/screen1.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -238,7 +238,7 @@ p {
   width: calc(100% - 50px);
 }
 
-/* line 159, ../sass/screen.scss */
+/* line 159, ../sass/screen1.scss */
 button, .button {
   display: inline-block;
   font-size: 17px;
@@ -253,21 +253,21 @@ button, .button {
   text-transform: uppercase;
   background-color: white;
 }
-/* line 173, ../sass/screen.scss */
+/* line 173, ../sass/screen1.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 180, ../sass/screen.scss */
+/* line 180, ../sass/screen1.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 186, ../sass/screen.scss */
+/* line 186, ../sass/screen1.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -278,11 +278,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 198, ../sass/screen.scss */
+/* line 198, ../sass/screen1.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 200, ../sass/screen.scss */
+/* line 200, ../sass/screen1.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -291,18 +291,18 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 211, ../sass/screen.scss */
+/* line 211, ../sass/screen1.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 215, ../sass/screen.scss */
+/* line 215, ../sass/screen1.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 220, ../sass/screen.scss */
+/* line 220, ../sass/screen1.scss */
 .the-evidence strong {
   font-family: "Hevetica Neue", helvetica, sans-serif;
   font-weight: 700;
@@ -310,7 +310,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 20px;
 }
 
-/* line 228, ../sass/screen.scss */
+/* line 228, ../sass/screen1.scss */
 .evidence-card {
   background: white;
   padding: 20px 20px 35px;
@@ -319,11 +319,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 236, ../sass/screen.scss */
+/* line 236, ../sass/screen1.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 240, ../sass/screen.scss */
+/* line 240, ../sass/screen1.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -331,7 +331,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 253, ../sass/screen.scss */
+/* line 253, ../sass/screen1.scss */
 .solution-statement p.h1:after {
   content: '™';
   vertical-align: top;
@@ -339,7 +339,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-weight: 400;
 }
 
-/* line 262, ../sass/screen.scss */
+/* line 262, ../sass/screen1.scss */
 .solution-card {
   border-radius: 8px;
   box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
@@ -350,18 +350,18 @@ CONSIDERATION-SPECIFIC STUFF
   height: auto;
 }
 
-/* line 272, ../sass/screen.scss */
+/* line 272, ../sass/screen1.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: inherit;
   display: block;
   margin-top: 40px;
 }
-/* line 278, ../sass/screen.scss */
+/* line 278, ../sass/screen1.scss */
 .the-follow-up a {
   color: white;
 }
-/* line 282, ../sass/screen.scss */
+/* line 282, ../sass/screen1.scss */
 .the-follow-up .coupon-code strong,
 .the-follow-up span.social-account,
 .the-follow-up .to-thirty {
@@ -370,33 +370,33 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 18px;
   font-style: initial;
 }
-/* line 291, ../sass/screen.scss */
+/* line 291, ../sass/screen1.scss */
 .the-follow-up .emoji {
   font-style: initial;
   vertical-align: middle;
   font-size: 1.7rem;
 }
 
-/* line 298, ../sass/screen.scss */
+/* line 298, ../sass/screen1.scss */
 .at-resp-share-element .at-share-btn {
   margin: 0 4px 5px;
 }
 
 /* *************************
-  Molbile Styles
+  Mobile Styles
 ************************* */
 @media screen and (max-width: 667px) {
-  /* line 308, ../sass/screen.scss */
+  /* line 308, ../sass/screen1.scss */
   h1, .h1 {
     font-size: 38px;
   }
 
-  /* line 311, ../sass/screen.scss */
+  /* line 311, ../sass/screen1.scss */
   .main-section {
     margin-top: 0px;
     max-height: inherit;
     height: auto;
-    min-height: 75vh;
+    min-height: 60vh;
     display: flex;
     justify-content: center;
     /* align horizontal */
@@ -404,59 +404,63 @@ CONSIDERATION-SPECIFIC STUFF
     /* align vertical */
   }
 
-  /* line 320, ../sass/screen.scss */
+  /* line 320, ../sass/screen1.scss */
   .problem-statement {
-    margin-top: 0;
+    margin-top: 10vh;
   }
 
-  /* line 323, ../sass/screen.scss */
+  /* line 323, ../sass/screen1.scss */
   .buttons {
     position: relative;
     width: 100%;
     bottom: 0;
   }
 
-  /* line 328, ../sass/screen.scss */
+  /* line 328, ../sass/screen1.scss */
   .wrapper {
-    padding: 0 25px;
+    padding: 0 25px 20px;
     padding-top: 1vh;
     margin: 20px auto;
   }
 
-  /* line 333, ../sass/screen.scss */
+  /* line 333, ../sass/screen1.scss */
   .intro,
   .solution-intro {
     font-size: 18px;
   }
 
-  /* line 337, ../sass/screen.scss */
+  /* line 337, ../sass/screen1.scss */
   .the-evidence {
     font-size: 20px;
   }
 
-  /* line 341, ../sass/screen.scss */
+  /* line 340, ../sass/screen1.scss */
+  .solution-element {
+    margin-top: 5vh;
+  }
+  /* line 342, ../sass/screen1.scss */
   .solution-element .emoji {
     display: block;
     margin-top: 10px;
   }
 
-  /* line 346, ../sass/screen.scss */
+  /* line 347, ../sass/screen1.scss */
   .the-follow-up {
     font-size: 17px;
   }
-  /* line 349, ../sass/screen.scss */
+  /* line 350, ../sass/screen1.scss */
   .the-follow-up .coupon-code strong,
   .the-follow-up span.social-account,
   .the-follow-up .to-thirty {
     font-size: 18px;
   }
 
-  /* line 355, ../sass/screen.scss */
+  /* line 356, ../sass/screen1.scss */
   .solution-card {
     padding: 50px 20px 20px;
   }
 
-  /* line 359, ../sass/screen.scss */
+  /* line 360, ../sass/screen1.scss */
   button, .button {
     display: inline-block;
     font-size: 14px;
@@ -464,45 +468,45 @@ CONSIDERATION-SPECIFIC STUFF
     padding: 5px 25px;
   }
 }
-@media screen and (max-width: 374px) {
-  /* line 368, ../sass/screen.scss */
+@media screen and (max-width: 320px) {
+  /* line 369, ../sass/screen1.scss */
   .main-section {
     min-height: 80vh;
   }
 
-  /* line 371, ../sass/screen.scss */
+  /* line 372, ../sass/screen1.scss */
   h1, .h1 {
     font-size: 32px;
   }
 
-  /* line 375, ../sass/screen.scss */
+  /* line 376, ../sass/screen1.scss */
   .wrapper {
-    padding: 0 20px;
+    padding: 0 20px 25px;
   }
 
-  /* line 378, ../sass/screen.scss */
+  /* line 379, ../sass/screen1.scss */
   .caption-label {
     font-size: 15px;
   }
 
-  /* line 381, ../sass/screen.scss */
+  /* line 382, ../sass/screen1.scss */
   .the-evidence {
     font-size: 18px;
   }
 
-  /* line 384, ../sass/screen.scss */
+  /* line 385, ../sass/screen1.scss */
   .solution-intro {
     font-size: 14px;
   }
 
-  /* line 388, ../sass/screen.scss */
+  /* line 389, ../sass/screen1.scss */
   .the-follow-up .coupon-code strong,
   .the-follow-up span.social-account,
   .the-follow-up .to-thirty {
     font-size: 16px;
   }
 
-  /* line 394, ../sass/screen.scss */
+  /* line 395, ../sass/screen1.scss */
   button, .button {
     display: inline-block;
     font-size: 13px;
