--- a/sass/screen13.scss
+++ b/sass/screen13.scss
@@ -316,13 +316,13 @@ CONSIDERATION-SPECIFIC STUFF
 		margin-top: 0px;
 		max-height: inherit;
 		height: auto;
-		min-height: 60vh;
+		min-height: 450px;
 		display: flex;
 		justify-content: center; /* align horizontal */
 		align-items: center; /* align vertical */
 	}
 	.problem-statement {
-		margin-top: 10vh;
+		margin-top: 1vh;
 	}
 	.buttons {
 		position: relative;
@@ -334,19 +334,30 @@ CONSIDERATION-SPECIFIC STUFF
 		padding-top: 1vh;
 		margin: 20px auto;
 	}
-	.intro,
-	.solution-intro {
+	.intro {
 		font-size: 18px;
+	}
+	.consideration-element {
+		margin-top: 2.5vh;
 	}
 	.the-evidence {
 		font-size: 20px;
 	}
 	.solution-element {
-		margin-top: 5vh;
+		margin-top: 1vh;
 		.emoji {
 			display: block;
 			margin-top: 10px;
 		}
+	}
+	.solution-card {
+		padding: 40px 15px 15px;
+		p {
+			margin-bottom: 0;
+		}
+	}
+	.solution-intro {
+		font-size: 15px;
 	}
 	.the-follow-up {
 		font-size: 17px;
@@ -371,7 +382,7 @@ CONSIDERATION-SPECIFIC STUFF
 
 @media screen and (max-width: 320px) {
 	.main-section {
-		min-height: 70vh;
+		min-height: 400px;
 	}
 	h1, .h1 {
 		font-size: 32px;
